# cartagen

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  README.md  README.rst  README_old.rst  __init__.py  embankment.py  news.rst  pyproject.toml  setup.py  strokes_iga.py
algorithms/buildings/: amalgamation.py  squaring.py
algorithms/lines/: line_simplification  line_smoothing.py
cartagen/: __init__.py  _version.py
cartagen/algorithms/: README.md  __init__.py  propagation.py
cartagen/data/: basque.qmd  branching.geojson  detection.qmd
cartagen/enrichment/: __init__.py  building_measures.py  pastiness.py  strokes.py  strokes_river.py
cartagen/evaluation/: README.md
cartagen/processes/: README.md  __init__.py  galbe.py  least_squares.py
cartagen/utils/: __init__.py  debug.py  plot_utils.py
cartagen4py/: __init__.py  _version.py
cartagen4py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cartagen4py/algorithms/: README.md  __init__.py
cartagen4py/data/: crossroads.geojson  detection.geojson  dual.geojson  dual_carriageways.geojson  edges.geojson  external.geojson  faces.geojson  internal.geojson  mains.geojson  minor.geojson  network_links.geojson  network_nodes.geojson  nodes.geojson  polygontest.qmd  roundabouts.geojson  test.geojson  triangles.geojson
cartagen4py/data_enrichment/: __init__.py  bends.py  building_measures.py  network.py  pastiness.py  stroke.py  strokeriver.py  urban_areas.py
cartagen4py/enrichment/: __init__.py  building_measures.py  pastiness.py  strokeriver.py  strokes.py  strokes_river.py  urban_areas.py
cartagen4py/processes/: README.md  __init__.py  galbe.py
cartagen4py/util/: angle_operations.py  extent.py  geometric_algorithms.py  morpho_math.py  segment.py  vector2D.py
cartagen4py/utils/: __init__.py  debug.py
cartagen4qgis/: Makefile  README.html  README.md  README.txt  __init__.py  cartagen4qgis.py  cartagen4qgis_algorithm.py  cartagen4qgis_provider.py  metadata.txt  pb_tool.cfg
cartagen4qgis/src/: provider.py
data_enrichment/: urban_areas.py
docs/: .readthedocs.yaml  NEWS.rst  README.rst  _reference.rst  algorithms.rst  bends.rst  bibliography.bib  bibliography.rst  buildings.rst  cartagen4qgis.rst  changelog.rst  conf.py  contribution.rst  contributors.rst  enrichment.rst  faq.rst  index.rst  installation.rst  installation_py.rst  installation_qgis.rst  lines.rst  manual.rst  networks.rst  notebooks.rst  partitioning.rst  points.rst  polygons.rst  processes.rst  qgis.rst  requirements.txt  roadmap.rst  tools.rst  user_guide.rst  zpending.txt
docs/_static/: custom.css
docs/code/: building_amalgamation.py  building_simplification.py  building_squaring.py  collapse_branching_crossroads.py  collapse_dead_ends.py  collapse_dual_carriageways.py  collapse_roundabouts.py  compute_boffet_urban_areas.py  detect_branching_crossroads.py  detect_dead_ends.py  detect_dual_carriageways.py  raposo.py  (+12 more)
evaluation/: README.md  constraint_satisfaction.py
notebooks/: LabelGrid.ipynb  SwingingArm.ipynb  cartagen4py  cartagen4py.ipynb  requirements.txt
util/: angle_operations.py  geometric_algorithms.py  morpho_math.py  segment.py
(+725 files in other folders)
